--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 @import "tailwindcss" theme(static);
 @import "@nuxt/ui";
+
+:root {
+    font-family: "Inter", sans-serif;
+    letter-spacing: -3%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 .font-header {
     font-family: 'Rubik', sans-serif;
